# workflow

./: BigRedButton.csh  CMakeLists.txt  CheckLev1.csh  Makefile  README.md  Rules.mk  cancelticket.csh  check_all_gates.csh  checkbadtasks.csh  checkgates.csh  checktasks.csh  cleanup.csh  cleanup_by_cron.csh  cleanup_taskmanagers.csh  enable_workflow.csh  enablegate.csh  gatekeeper.csh  gatekeeper.pl  gatekeeper.restart  getoffset.csh  init_pipeline.csh  jsoc_proc_status.csh  listactive.csh  makegate.csh  maketask.csh  maketicket.csh  paths.mk  pausegate.csh  registrations.mk  setup_workflow.csh  show_active.csh  taskmanager.csh  update_mdi.csh  util.pm  wait_ticket.csh  watchgates.csh  watchtasks.csh
add_scripts/: add_aia_lev1  add_clock  add_coverage_update  add_fd_M  add_fd_M_96m  add_fd_V  add_hmi.ME_720s  add_hmiLOS_repeat  add_hmi_Fits  add_hmi_Fits_nrt  add_hmi_Harps_nrt  add_hmi_LOS_1.5  add_hmi_LOSnrt  add_hmi_ME_fd10  add_hmi_Marmask  add_hmi_Vec_nrt_repeat  add_hmi_Vector_1.5  add_hmi_Vector_ObsOnly  add_hmi_Vector_nrt  add_hmi_Vectornrt  add_hmi_daily_repeat  add_hmi_harpimages.csh  add_hmi_harpimages_nrt.csh  add_hmi_lev1cnrt  add_hmi_lev1nrt  add_hmi_limb_fit  add_hmi_nrt_repeat  add_hmi_sharp  add_hmi_sharp_nrt  add_hmi_vfisv  add_images  add_mdi_repeat  add_mdi_synop  add_noLimbDark_45s  add_noLimbDark_45s_nrt  add_noLimbDark_720  add_noLimbDark_720s_nrt  add_repeat_daily  add_repeat_harp_nrt  add_vwV
apps/: GetNextID.c  Rules.mk  heat.sao  mag.lut
deprecated/: enable_workflow.csh  fill_mdi_gaps.csh  makehicadIc.csh  makeimageslowhigh.old  remakeimages  repeat_web_show_coverage.csh  show_jsoc_proc_status.csh  stage-dsds_daily_data.csh  stage-dsds_hourly_data.csh  stage-dsds_sixhour_data.csh  stage_lev0_by_FSN.csh  start_hmi_harp_nrt.csh  status-dsds_daily.csh  status-dsds_hourly.csh  status-dsds_sixhour.csh  status-mdi.vw_V_lev18.csh  status_aia.lev0.csh  status_offset_clock.csh  status_show_cov.csh  update-mdi.fd_M_96m  update-mdi.fd_V  update-mdi.vw_V  update_aia.lev1.csh  update_aia.lev1p5.csh  update_hmi.B_576s.csh  update_hmi.Harp.csh  update_hmi.Ic_noLimbDark  update_hmi.LOScnrt  update_hmi.ME_720s  update_hmi.ME_720s.csh  update_hmi.Synop  update_hmi.VFISV.csh  update_hmi.Vector_ObsOnly.csh  update_hmi.dcon_45s.csh  update_hmi.dcon_720s.csh  update_hmi.harpImages.csh  update_hmi.harpImages_nrt.csh  update_hmi.lev1cnrt.csh  update_hmi.sharp.csh  update_mdi.Synop  (+1 more)
doc/: workflow.doc
scripts/: checkDRMSnSUMS.csh  eclipse.pl  fill_mdi_gaps.csh  harp_nrt_movies.csh  makeAnyMovie  makeIcmovie  make_M_720_fits  make_M_720_fits_nrt  makehicadIc.csh  remakeimages  (+100 more)
